--- a/style.css
+++ b/style.css
@@ -3,4 +3,33 @@
     padding: 0;
     font-family: 10px;
     text-align: center;
+    letter-spacing: 2px;
+}
+
+body {
+    color: white;
+    background-color:black;
+}
+
+header {
+    height: 10vh;
+    background-color: grey;
+}
+
+.logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.circulo {
+    width: 600px;
+    height: 600px;
+    border-radius: 50%;
+    background-color: rgb(15, 6, 4);
+}
+
+footer {
+    height: 10vh;
+    background-color: grey;
 }
